Desribe our use of MAPS RBL and ORBS on the egcs mail server.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -6,17 +6,20 @@
 <h1 align="center">egcs project mailing lists</h1>
 
 
-<p>We are in the process of moving all mailing list functions from the Cygnus
-mailserver to the egcs machine.
+<p>We are in the process of moving all mailing list functions from the
+Cygnus mailserver to the egcs machine. If you have problems sending
+mail to egcs.cygnus.com, note that we block spam sites and open mail
+relays by subscribing to <a href="http://maps.vix.com/rbl/"> MAPS
+RBL</a> and <a href="http://www.orbs.org/">ORBS</a>. Please do not
+complain to us, but ask your server admin to fix his setup.
 
-<p>This conversion has three key benefits for the
-egcs project.
+<p>The conversion to egcs.cygnus.com has three key benefits:
 <ol>  
   <li> The delay between the time a message is posted to a
   list and the time it arrives at its final destination should be significantly
   reduced.
   <li> We will be able to put in anti-spam filters on our lists without
-  effecting Cygnus's mailserver.
+  effecting Cygnus's mailserver (see above).
   <li> More of the list functions will be automated.
 </ol>
 
@@ -114,7 +117,7 @@ take 24-48 after you unsubscribe before the messages stop.
 <hr>
 <a name="glimpsebox"></a>
 
-<p><i>Last modified:  November 27, 1998</i>
+<p><i>Last modified:  February  1, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
