--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -6,10 +6,10 @@
 <h1 align="center">egcs project mailing lists</h1>
 
 
-<p>We are in the process of moving all mailing list functions from the
-Cygnus mailserver to the egcs machine. If you have problems sending
-mail to egcs.cygnus.com, note that we block spam sites and open mail
-relays by subscribing to <a href="http://maps.vix.com/rbl/"> MAPS
+<p>We have moved all mailing list functions from the Cygnus mailserver to the
+egcs machine. If you have problems sending mail to egcs.cygnus.com, note that
+we block spam sites and open mail relays by subscribing to
+<a href="http://maps.vix.com/rbl/"> MAPS
 RBL</a> and <a href="http://www.orbs.org/">ORBS</a>. Please do not
 complain to us, but ask your server admin to fix his setup.
 
@@ -23,34 +23,33 @@ complain to us, but ask your server admin to fix his setup.
   <li> More of the list functions will be automated.
 </ol>
 
-<p>Please read the subscribe/unsubscribe instructions carefully.  They may
-have changed since you last visited this page.  They may also be different
-for certain lists as we move the lists to the egcs machine.
+<p>Please read the subscribe/unsubscribe instructions carefully.  They 
+may have changed since you last visited this page.
 
 
 <ul>
-  <li><b><a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/egcs-announce/">egcs-announce</a></b>
   is a read-only low volume list where
   we post announcements about releases or other important events.
 
-  <li><b><a href="http://www.cygnus.com/ml/egcs/">egcs</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/egcs/">egcs</a></b>
   is a high volume list for general discussions about egcs.  Anything not
   covered by other mailing lists is suitable for discussion on <b>egcs</b>.
 
-  <li><b><a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/egcs-bugs/">egcs-bugs</a></b>
   is a relatively high volume list for bug reports and general discussion
   about bugs in egcs.
 
-  <li><b><a href="http://www.cygnus.com/ml/egcs-patches/">egcs-patches</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/egcs-patches/">egcs-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
   particular patches.  All patch submissions and all discussion for a
   particular patch should be sent to <b>egcs-patches</b>.
 
-  <li><b><a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a></b>
+  <li><b><a href="http://egcs.cygnus.com/ml/egcs-cvs/">egcs-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
   egcs CVS repository.
 
-  <li><b><a href="http://www.cygnus.com/ml/egcs-testresults/">
+  <li><b><a href="http://egcs.cygnus.com/ml/egcs-testresults/">
   egcs-testresults</a></b> is a moderate volume list where test results for
   the egcs compilers are posted.  Note, there are no list archives for this
   list (yet).
@@ -64,20 +63,18 @@ for certain lists as we move the lists to the egcs machine.
 and try to avoid cross posting a message to several lists.
 
 <p>Web archives for all mailing lists are on-line;
-<a href="http://www.cygnus.com/ml/egcs/">egcs</a>,
-<a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
+<a href="http://egcs.cygnus.com/ml/egcs/">egcs</a>,
+<a href="http://egcs.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
 and
-<a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
-<a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
-<a href="http://www.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
+<a href="http://egcs.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
+<a href="http://egcs.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
+<a href="http://egcs.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
+<a href="http://egcs.cygnus.com/ml/egcs-testresults/">egcs-testresults</a>.
 
 <p>Unfortunately the web archives are not searchable.  We hope to replace
 Hypermail with another archiving engine with search capabilities in the
 future.
 
-<h2> egcs, egcs-cvs, egcs-testresults and egcs-announce</h2>
-<p>These lists are run from the new list server on egcs.cygnus.com and thus
-work a little differently than the other lists.
 
 <p>To post a message, just send mail to <i>listname</i><tt>@egcs.cygnus.com</tt>.
 Please refrain from sending messages in HTML, RTF or similiar formats.
@@ -88,28 +85,6 @@ Please refrain from sending messages in HTML, RTF or similiar formats.
 
 <p>To unsubscribe, send a mail note to 
 <i>listname</i><tt>-unsubscribe@egcs.cygnus.com</tt> No message body is required.
-
-<h2> egcs-bugs, egcs-patches</h2>
-<p>To post a message, just send mail to <i>listname</i><tt>@cygnus.com</tt>.
-Please refrain from sending messages in HTML, RTF or similiar formats.
-
-<p>To subscribe to a list, send mail to
-<i>listname</i><tt>-request@cygnus.com</tt> with a message body consisting of
-<blockquote>
-  <tt>subscribe</tt> <i>listname</i> <i>your-email-address</i>
-</blockquote>
-
-<p>To unsubscribe, send a mail note to the appropriate
-<tt>-request@cygnus.com</tt> address with a message body of
-<blockquote>
-  <tt>unsubscribe </tt> <i>listname</i> <i>your-email-address</i>
-</blockquote>
-
-<p>Currently messages posted to the lists get delivered to list members 24
-to 48 hours after submission to the list.  As a result it may take a 24-48
-hours after you subscribe before messages begin to flow, similarly it may
-take 24-48 after you unsubscribe before the messages stop.
-
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
