--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -51,8 +51,7 @@ may have changed since you last visited this page.
 
   <li><b><a href="http://egcs.cygnus.com/ml/egcs-testresults/">
   egcs-testresults</a></b> is a moderate volume list where test results for
-  the egcs compilers are posted.  Note, there are no list archives for this
-  list (yet).
+  the egcs compilers are posted.
 </ul>
  
 <a name="msgsize"></a>
