Note digest subscribe address.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -80,10 +80,16 @@ Please refrain from sending messages in HTML, RTF or similiar formats.
 
 
 <p>To subscribe to a list, send mail to
-<i>listname</i><tt>-subscribe@egcs.cygnus.com</tt> No message body is required.
+<i>listname</i><tt>-subscribe@egcs.cygnus.com</tt>
 
 <p>To unsubscribe, send a mail note to 
-<i>listname</i><tt>-unsubscribe@egcs.cygnus.com</tt> No message body is required.
+<i>listname</i><tt>-unsubscribe@egcs.cygnus.com</tt>
+
+<p>Each list also has a digest, which you can subscribe to by sending mail
+to
+<i>listname</i><tt>-digest-subscribe@egcs.cygnus.com</tt>
+
+
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
