--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -9,7 +9,7 @@
 <h1 align="center">egcs: Links and Selected Readings</h1>
 
 
-<h2>GCC specific literature</h2>
+<h2>GCC-specific Literature</h2>
 
 <ul>
 
@@ -79,7 +79,7 @@
 </ul>
 
 
-<h2>Collected papers/sites on standards, compilers, optimization, etc.</h2>
+<h2>Collected Papers/Sites on Standards, Compilers, Optimization, Etc.</h2>
 
 <ul>
 
@@ -130,8 +130,9 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
     <li><a href="http://www.eg3.com/softdv/compiler.htm">http://www.eg3.com/softdv/compiler.htm</a>
     <li>These resource pages are published as part of EG3's Free Electronic Engineers' Toolbox at:
     <ul>
-      <li><a href="http://www.eg3.com/index.htm">http://www.eg3.com/index.htm</a></ul>
+      <li><a href="http://www.eg3.com/index.htm">http://www.eg3.com/index.htm</a>
     </ul>
+  </ul>
 
 <p>
 
@@ -151,7 +152,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <p><a href="index.html">Return to the egcs home page</a>
 
 <hr>
-<i>Last modified on January 27, 1999.</i>
+<i>Last modified on February 4, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 
