Refer to search engine covering the lists at bitrange.com. By Hans-Peter Nilsson <hp@bitrange.com>.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -69,11 +69,13 @@ and
 <a href="http://egcs.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
 <a href="http://egcs.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
 <a href="http://egcs.cygnus.com/ml/egcs-testresults/">egcs-testresults</a>.
+The archives are
+<a href="http://bitrange.com/egcs/search.html">searchable</a>.
 
-<p>Unfortunately the web archives are not searchable.  We hope to replace
-Hypermail with another archiving engine with search capabilities in the
-future.
-
+<p>The search engine for the web archives is currently hosted at
+<a href="http://bitrange.com/">BitRange.com</a>. If you have comments about
+the search function, send a copy to
+<a href="mailto:hp@bitrange.com">hp@bitrange.com</a>.
 
 <p>To post a message, just send mail to <i>listname</i><tt>@egcs.cygnus.com</tt>.
 Please refrain from sending messages in HTML, RTF or similiar formats.
@@ -97,7 +99,7 @@ to
 <hr>
 <a name="glimpsebox"></a>
 
-<p><i>Last modified:  February  1, 1999</i>
+<p><i>Last modified:  February  8, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
