--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -19,7 +19,7 @@ complain to us, but ask your server admin to fix his setup.
   list and the time it arrives at its final destination should be significantly
   reduced.
   <li> We will be able to put in anti-spam filters on our lists without
-  effecting Cygnus's mailserver (see above).
+  affecting Cygnus's mailserver (see above).
   <li> More of the list functions will be automated.
 </ol>
 
