add reference to Goldberg addendum doc

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -88,6 +88,10 @@
   by David Goldberg, including Doug Priest's supplement (PostScript
   format)
 
+  <li><a href="http://www.validgh.com/goldberg/addendum.html">
+  Differences Among IEEE 754 Implementations</a>
+  by David Goldberg
+
   <li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively
   Scalar Compiler Project</a>
 
