New FAQ entry regarding gperf requirements. By Bret McGuire <mersault@busboy.sped.ukans.edu>.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -61,9 +61,13 @@ to check out the egcs sources.
 update"</code> will sync your local copy with the repository.  See the
 CVS manual for additional information on how to use CVS.
 
-<p>We recommend you read the <a href="faq.html#generated_files"> 
-FAQ entry regarding additional tools you may need when building from CVS
-sources </a>
+<br><br>
+<strong>Note</strong>
+<p>It may be necessary to obtain patches for common utilities when building
+from CVS.  We recommend you read the <a href="faq.html#generated_files"> 
+FAQ entry regarding additional tools</a> you may need.  Another 
+FAQ entry documents <a href="faq.html#gperf">changes you will likely have
+to make to the gperf utility</a>.
 
 <p> You can check out the egcs-1.0.x release branch with the following command:
 
@@ -91,7 +95,7 @@ the web pages.
 <p>Enjoy!
 
 <hr>
-<i>Last modified on January  8, 1999.</i>
+<i>Last modified on February 16, 1999.</i>
 <hr>
 
 <a href="">Return to the egcs home page</a>
