--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -95,6 +95,8 @@ comp.std.c++ FAQ</a>.
     <li><a href="spam.html">Dealing with spam on the lists</a>
     <li><a href="#squangle">How to work around too long C++ symbol names? 
 	 (<tt>-fsquangle</tt>)</a>
+    <li><a href="#gperf">When building from CVS sources, I see 'gperf: invalid option -- F', 
+	even with the most current version of gperf.</a>
   </ol>
 </ol>
 
@@ -979,7 +981,7 @@ to rebuild egcs.</p>
 <p>Autoconf is available from
 <a href="http://sourceware.cygnus.com/autoconf/">
 http://sourceware.cygnus.com/autoconf/</a>; have a look at
-<a name="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">
+<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">
 ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a> for the other packages.
 </p>
 
@@ -1079,8 +1081,33 @@ initialized by default), then rebuilding egcs and any C++ libraries.
 
 <hr>
 
+<h2><a name="gperf">When building from CVS sources, I see 'gperf: 
+invalid option -- F', even with the most current version of gperf.
+</a></h2>
+
+<p>The current version of gperf (v2.7) does not support the -F flag 
+which is used when building egcs from CVS sources.  You will need to 
+obtain a patch for gperf and rebuild the program; this patch is available 
+at <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure">
+ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a>
+
+<p>Patches for other tools, particularly autoconf, may also be necessary 
+if you're building from CVS sources.  Please see the 
+<a href="#generated_files">FAQ entry</a> regarding these tools to 
+determine if anything else is needed.
+
+<p>These patched utilities should <strong>only</strong> be required if 
+you are building from CVS sources.  For example, gperf is used to 
+generate C code for a perfect hash function given an input file.  
+Distributions of egcs already contain the generated C code, while the 
+CVS sources will provide only the gperf input file.  So gperf should 
+only be necessary if you are building anything obtained from CVS.
+
+<hr>
+
+
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  January 21, 1999</i>
+<p><i>Last modified:  February 15, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
