--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -57,6 +57,11 @@ serious problems in egcs-1.1.1.
 
     <li> Work around bug in the scheduler which caused qt to be mis-compiled
 	 on some platforms.
+
+    <li> Fix code generation problems with -fshort-enums.
+
+    <li> Tighten security for temporary files.
+
   </ul>
   <li> Platform specific improvements and fixes
   <ul>
@@ -91,6 +96,8 @@ serious problems in egcs-1.1.1.
     <li> Fix problems with old assembler on x86 NeXT systems.
 
     <li> Fix PIC code generation problems for the Sparc port.
+
+    <li> Fix minor bug with LONG_CALLS in PowerPC SVR4 support.
 
   </ul>
 </ul>
