--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -110,36 +110,36 @@ carefully tested and should be comparable in quality to most gcc releases.
 sources; it contains all of the new features found in gcc-2.8.1 as well as all
 new development from gcc2 up to June 6, 1998.
 
-<p>See the <a href="features.html"> new features</a> page for a more complete
+<p>See the <a href="features.html">new features</a> page for a more complete
 list of new features found in egcs-1.1 releases.
 
 <p>The egcs-1.1.2 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
 of the egcs-1.1.2 distribution).  However, we also keep the most up to date
-<a href="../install/index.html"> installation instructions </a>
-and <a href="buildstat.html"> build/test status </a> on our web page.  We
+<a href="../install/index.html">installation instructions</a>
+and <a href="buildstat.html">build/test status</a> on our web page.  We
 will update those pages as new information becomes available.
 
 <p> The egcs project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
-<a href="../thanks.html"> amazing group of volunteers </a> is what makes
+<a href="../thanks.html">amazing group of volunteers</a> is what makes
 egcs successful.
 
 <p>And finally, we can't in good conscience fail to mention some
-<a href="caveats.html"> caveats </a> to using egcs-1.1.2.
+<a href="caveats.html">caveats</a> to using egcs-1.1.2.
 
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1.2
 from egcs.cygnus.com (USA California)</a>
 <!-- <p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
-Download egcs-1.1.2 from go.cygnus.com (USA California -- High speed link
+Download egcs-1.1.2 from go.cygnus.com (USA California - High speed link
 provided by Stanford)</a> -->
 <p><a href="ftp://cambridge.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1.2
 from cambridge.cygnus.com (USA Massachusetts)</a>
 
-<p>The egcs-1.1.2 release is also available on many mirror sites.<br>
-<a href="../mirrors.html"> Goto mirror list to find a closer site</a>
+<p>The egcs-1.1.2 release is also available on many
+<a href="../mirrors.html">mirror sites</a>.
 
 <hr>
 <i>Last modified on February 17, 1999.</i>
