[Ss]parc -> SPARC.

--- a/htdocs/egcs-1.0/features-2.8.html
+++ b/htdocs/egcs-1.0/features-2.8.html
@@ -95,7 +95,7 @@ individual CPU below):
     NEC V850 processor.
     Matsushita MN10200 processor.
     Matsushita MN10300 processor.
-    Sparc and PowerPC running on VxWorks.
+    SPARC and PowerPC running on VxWorks.
     Support both glibc versions 1 and 2 on Linux-based GNU systems.
 
 New features for DEC Alpha systems:
@@ -147,9 +147,9 @@ New features for SPARC-based systems:
 
     The ultrasparc cpu.
     The sparclet cpu, supporting only a.out file format.
-    Sparc running SunOS 4 with the GNU assembler.
-    Sparc running the Linux-based GNU system.
-    Embedded Sparc processors running the ELF object file format.
+    SPARC running SunOS 4 with the GNU assembler.
+    SPARC running the Linux-based GNU system.
+    Embedded SPARC processors running the ELF object file format.
     -mcpu=xxx
     -mtune=xxx
     -malign-loops=xxx
@@ -222,7 +222,7 @@ New feature for Solaris systems:
 </pre>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  December 8, 1997</i>
+<p><i>Last modified:  February 18, 1999</i>
 
 </body>
 </html>
