--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -19,7 +19,7 @@ serious problems in egcs-1.1.1.
 <ul>
   <li> General improvements and fixes
   <ul>
-    <li> Fix bug in loop optimizer which caused the Sparc (and potentially
+    <li> Fix bug in loop optimizer which caused the SPARC (and potentially
 	 other) ports to segfault.
 
     <li> Fix infinite recursion in alias analysis and combiner code.
@@ -68,7 +68,7 @@ serious problems in egcs-1.1.1.
     <li> Fix detection of PPro/PII on Unixware 7.
 
     <li> Fix compiler segfault when building spec99 and other programs
-	 for Sparc targets.
+	 for SPARC targets.
 
     <li> Fix code generation bugs for integer and floating point conditional	
 	 move instructions on the PPro/PII.
@@ -95,7 +95,7 @@ serious problems in egcs-1.1.1.
 
     <li> Fix problems with old assembler on x86 NeXT systems.
 
-    <li> Fix PIC code generation problems for the Sparc port.
+    <li> Fix PIC code generation problems for the SPARC port.
 
     <li> Fix minor bug with LONG_CALLS in PowerPC SVR4 support.
 
@@ -142,7 +142,7 @@ from cambridge.cygnus.com (USA Massachusetts)</a>
 <a href="../mirrors.html">mirror sites</a>.
 
 <hr>
-<i>Last modified on February 17, 1999.</i>
+<i>Last modified on February 18, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
