--- a/htdocs/egcs-1.1/news.html
+++ b/htdocs/egcs-1.1/news.html
@@ -81,7 +81,7 @@ are still not easy, but they are improving.
 
 Target specific NEWS
 
-    Sparc: Now includes V8 plus and V9 support, lots of tuning for Ultrasparcs
+    SPARC: Now includes V8 plus and V9 support, lots of tuning for Ultrasparcs
            and uses the Haifa scheduler by default.
 
     Alpha: EV6 tuned, optimized expansion of memcpy/bzero.
@@ -209,7 +209,7 @@ individual CPU below):
     NEC V850 processor.
     Matsushita MN10200 processor.
     Matsushita MN10300 processor.
-    Sparc and PowerPC running on VxWorks.
+    SPARC and PowerPC running on VxWorks.
     Support both glibc versions 1 and 2 on Linux-based GNU systems.
 
 New features for DEC Alpha systems:
@@ -261,9 +261,9 @@ New features for SPARC-based systems:
 
     The ultrasparc cpu.
     The sparclet cpu, supporting only a.out file format.
-    Sparc running SunOS 4 with the GNU assembler.
-    Sparc running the Linux-based GNU system.
-    Embedded Sparc processors running the ELF object file format.
+    SPARC running SunOS 4 with the GNU assembler.
+    SPARC running the Linux-based GNU system.
+    Embedded SPARC processors running the ELF object file format.
     -mcpu=xxx
     -mtune=xxx
     -malign-loops=xxx
@@ -403,7 +403,7 @@ New options for supported targets:
 
     GNU on many targets.
     NetBSD on MIPS, m68k, VAX, and x86.
-    LynxOS on x86, m68k, Sparc, and RS/6000.
+    LynxOS on x86, m68k, SPARC, and RS/6000.
     VxWorks on many targets.
 
     Windows/NT on x86 architecture.  Initial support for Windows/NT on Alpha
@@ -617,7 +617,7 @@ Numerous (mostly minor) bugs have been fixed.
 The following new configurations are supported:
 
 	GNU on x86 (instead of treating it like MACH)
-	NetBSD on Sparc and Motorola 68k
+	NetBSD on SPARC and Motorola 68k
 	AIX 4.1 on RS/6000 and PowerPC systems
 	Sequent DYNIX/ptx 1.x and 2.x.
 	Both COFF and ELF configurations on AViiON without using /bin/gcc
@@ -709,12 +709,12 @@ machine-specific files.
 - The h8/300h is now supported; both the h8/300 and h8/300h ports come
   with 32 bit IEEE 754 software floating point support.
 
-- The 64-bit Sparc (v9) and 64-bit MIPS chips are supported.
+- The 64-bit SPARC (v9) and 64-bit MIPS chips are supported.
 
 - NetBSD is supported on m68k, Intel x86, and pc523 systems and FreeBSD
   on x86.
 
-- COFF is supported on x86, m68k, and Sparc systems running LynxOS.
+- COFF is supported on x86, m68k, and SPARC systems running LynxOS.
 
 - 68K systems from Bull and Concurrent are supported and System V
   Release 4 is supported on the Atari.
@@ -741,7 +741,7 @@ machine-specific files.
 - Both NeXTStep 2.1 and 3 are supported on 68k-based architectures.
 
 - On the AMD 29k, the -msoft-float is now supported, as well as
-  -mno-sum-in-toc for RS/6000, -mapp-regs and -mflat for Sparc, and
+  -mno-sum-in-toc for RS/6000, -mapp-regs and -mflat for SPARC, and
   -membedded-pic for MIPS.
 
 - GCC can now convert division by integer constants into the equivalent
@@ -841,8 +841,8 @@ C Extensions Group (NCEG).
 * Complex numbers are now supported in C.  Use the keyword __complex__
 to declare complex data types.  See the manual for details.
 
-* GCC now supports `long double' meaningfully on the Sparc (128-bit
-floating point) and on the 386 (96-bit floating point).  The Sparc
+* GCC now supports `long double' meaningfully on the SPARC (128-bit
+floating point) and on the 386 (96-bit floating point).  The SPARC
 support is enabled on Solaris 2.x because earlier system versions
 (SunOS 4) have bugs in the emulation.
 
@@ -969,7 +969,7 @@ for targets that have a 68881.  (When we have run time library
 routines for extended floating point, then `long double' will use
 extended format on all 68K targets.)
 
-We expect to support extended floating point on the i386 and Sparc in
+We expect to support extended floating point on the i386 and SPARC in
 future versions.
 
 * Building GCC now automatically fixes the system's header files.
@@ -983,7 +983,7 @@ Therefore, the bug that size_t failed to be unsigned is fixed.
 All new files are constructed during the build process; 
 installation just copies them.
 
-* New targets supported: Clipper, Hitachi SH, Hitachi 8300, and Sparc
+* New targets supported: Clipper, Hitachi SH, Hitachi 8300, and SPARC
 Lite.
 
 * A totally new and much better Objective C run time system is included.
@@ -1053,9 +1053,9 @@ Newly documented compiler options:
 	Add PREFIX/DIR to the second include path.
 
 -mv8
-	Emit Sparc v8 code (with integer multiply and divide).
+	Emit SPARC v8 code (with integer multiply and divide).
 -msparclite
-	Emit Sparclite code (roughly v7.5).
+	Emit SPARClite code (roughly v7.5).
 
 -print-libgcc-file-name
 	Search for the libgcc.a file, print its absolute file name, and exit.
@@ -1075,7 +1075,7 @@ Newly documented compiler options:
 </pre>
 
 <p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  August 29, 1998</i>
+<p><i>Last modified:  February 18, 1999</i>
 
 </body>
 </html>
