--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -80,7 +80,7 @@ egcs.  A partial list of supported <tt>options</tt>:
   <br>For egcs-1.0.x releases <tt>--disable-haifa</tt> is the default on all
   platforms except the HPPA.
   <br>For newer releases <tt>--disable-haifa</tt> is the default on all
-  platforms except the alpha, hppa, powerpc, rs6000, sparc and m32r.
+  platforms except the alpha, hppa, powerpc, rs6000, SPARC and m32r.
 
   <li> <tt>--with-gnu-as</tt> -- Specify that the compiler should assume the GNU
   assembler (aka gas) is available. 
@@ -106,7 +106,7 @@ egcs.  A partial list of supported <tt>options</tt>:
   <li> <tt>--with-cpu=</tt><i>cpu</i> -- Specify which cpu variant the
   compiler should generate code for by default.  This is currently
   only supported on the some ports, specifically arm, powerpc, and
-  sparc. If configure does not recognize the model name (e.g. arm700,
+  SPARC. If configure does not recognize the model name (e.g. arm700,
   603e, or ultrasparc) you provide, please check the configure script
   for a complete list of supported models.
 
