--- a/htdocs/egcs-1.1/schedule.html
+++ b/htdocs/egcs-1.1/schedule.html
@@ -15,7 +15,7 @@ egcs-1.1, etc.
 
 <p> August 30, 1998.  Regression, libg++, glibc, linux kernel, rtems testing
 all look good.  RedHat 5.1 testing looks good on the x86 and I've been told
-that RedHat 5.1 testing on the Alpha looks good too.  No word on the Sparc
+that RedHat 5.1 testing on the Alpha looks good too.  No word on the SPARC
 port.
 
 <p> August 14, 1998.  The egcs-1.1 sources are frozen.  Only critical patches
@@ -80,7 +80,7 @@ the actual schedule used for egcs-1.1 so that we can improve the process
 in the future.
 
 <hr>
-<i>Last modified on August 30, 1998.</i>
+<i>Last modified on February 18, 1999.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
