[Ss]parc -> SPARC. Various additions to the "thanks" page.

--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -17,30 +17,36 @@ particular order.
   <li> Klaus-Georg Adams
   <li> Alasdair Baird for various bugfixes.
   <li> Per Bothner for various improvements to our infrastructure for
-  supporting new languages.  Chill and (someday) his Java contributions.
+  supporting new languages.  Chill and Java.
   <li> Don Bowman for mips-vxwork contributions.
   <li> Dave Brolley for work on cpplib and Chill.
+  <li> Christian Bruel for improvements to local store elimination.
   <li> Herman A.J. ten Brugge for various fixes.
   <li> Joe Buck for his guidance and leadership via the steering committee.
   <li> Craig Burley for overall direction in the steering committee and
   leadership of the Fortran effort.
   <li> Andrew Cagney
-  <li> John Carr for his alias work, sparc hacking, infrastructure improvements,
+  <li> John Carr for his alias work, SPARC hacking, infrastructure improvements,
   direction via the steering committee, loop optimizations, etc.
   <li> Scott Christley for his ObjC contributions.
   <li> Branko Cibej for more warning contributions.
   <li> Nick Clifton for arm, v850, m32r work, --help, and other random hacking.
   <li> Ralf Corsepious for SH testing and minor bugfixing.
-  <li> Stan Cox for care and feeding of the x86 port.
-  <li> Ulrich Drepper for his work on the C++ runtime libraries, glibc, and
-  testing of egcs using glibc.
+  <li> Stan Cox for care and feeding of the x86 port and lots of behind
+  the scenes hacking.
+  <li> Ian Dall for major improvements to the NS32k port.
+  <li> Ulrich Drepper for his work on the C++ runtime libraries, glibc, 
+  testing of egcs using glibc, ISO C9X support, CFG dumping support, etc.
   <li> Richard Earnshaw for his ongoing work with the ARM.
-  <li> David Edelsohn for his direction via the steering committee and
-  ongoing work with the RS6000/PowerPC port.
+  <li> David Edelsohn for his direction via the steering committee,
+  ongoing work with the RS6000/PowerPC port, and help cleaning up Haifa
+  loop changes.
+  <li> Mark Elbrecht for various DJGPP improvements.
   <li> Paul Eggert for random hacking all over gcc.
   <li> Klaus Espenlaub
+  <li> Marc Espie for OpenBSD support.
   <li> Doug Evans for much of the global optimization framework, arc, m32r,
-  and sparc work.
+  and SPARC work.
   <li> Fred Fish for BeOS support and Ada fixes.
   <li> R. Ganesan
   <li> Peter Gerwinski for various bugfixes and the Pascal front end.
@@ -51,21 +57,25 @@ particular order.
   <li> Torbjorn Granlund for various fixes and the c-torture testsuite.
   <li> Bruno Haible for improvements in the runtime overhead for EH, new
   warnings and assorted bugfixes.
+  <li> Andrew Haley for his Java work.
   <li> Michael Hayes for various thankless work he's done trying to get
-  the c30/c40 ports functional.
+  the c30/c40 ports functional.  Lots of loop and unroll improvements and
+  fixes.
   <li> Kate Hedstrom for staking the g77 folks with an initial testsuite.
-  <li> Richard Henderson for his ongoing sparc and alpha work, loop opts, and
-  generally fixing lots of old problems we've ignored for years.
+  <li> Richard Henderson for his ongoing SPARC and alpha work, loop opts, and
+  generally fixing lots of old problems we've ignored for years, flow
+  rewrite and lots of stuff I've forgotten.
   <li> Paul N. Hilfinger
   <li> Manfred Hollstein for his ongoing work to keep the m88k alive, lots
   of testing an bugfixing, particularly of our configury code.
   <li> Steve Holmgren for MachTen patches.
+  <li> Jan Hubicka for his x86 port improvments.
   <li> Christian Iseli for various bugfixes.
   <li> Kamil Iskra for general m68k hacking.
   <li> Lee Iverson for random fixes and mips testing.
   <li> Aaron Jackson
   <li> Andreas Jaeger
-  <li> Jakub Jelinek for his sparc work and sibling call optimizations.
+  <li> Jakub Jelinek for his SPARC work and sibling call optimizations.
   <li> J. Kean Johnston for OpenServer support.
   <li> Klaus Kaempf for his ongoing work to make alpha-vms a viable target.
   <li> Richard Kenner for his ongoing work with gcc2.
@@ -89,23 +99,26 @@ particular order.
   <li> Dave Love for his ongoing work with the Fortran front end and 
   runtime libraries.
   <li> H.J. Lu for his contributions to the steering committee, many x86
-  bug reports, prototype patches, etc.
-  <li> Andrew MacLeod for his ongoing work in building a real EH system.
+  bug reports, prototype patches, and keeping the Linux ports working.
+  <li> Andrew MacLeod for his ongoing work in building a real EH system,
+  various code generation improvements, etc.
   <li> Bob Manson for his behind the scenes work on dejagnu.
-  <li> Vladimir Markarov for hacking some ugly i960 problems and overall 
-  knowledge and direction in the area of instruction scheduling.
+  <li> Vladimir Markarov for hacking some ugly i960 problems, PowerPC
+  hacking and overall knowledge and direction in the area of instruction
+  scheduling.
   <li> Greg McGary for random fixes and (someday) bounded pointers.
   <li> David T. McWherter
   <li> Michael Meissner for LRS framework, m32r, v850, powerpc, haifa and
   other assorted hacking.
   <li> Jason Merrill for leading the g++ effort.
   <li> David Mosberger-Tang for various Alpha improvements.
+  <li> Stephen Moshier for ISO C9X support.
   <li> Bill Moyer for his behind the scenes work on various issues.
   <li> David Miller for overall direction via the steering committee, lots of
-  sparc work, improvements in jump.c and interfacing with the Linux kernel
+  SPARC work, improvements in jump.c and interfacing with the Linux kernel
   developers.
   <li> Mark Mitchell for mountains of C++ work, load/store hoisting out of
-  loops and alias analysis improvements.
+  loops and alias analysis improvements, ISO "restrict" support.
   <li> Alan Modra for various Linux bits and testing.
   <li> Toon Moene for overall leadership via the steering committee, and his
   ongoing work to make us make Fortran run fast.
@@ -113,6 +126,7 @@ particular order.
   way, including the haifa bug which was killing the Alpha & PowerPC Linux
   kernels.
   <li> Philippe De Muyter for his work on the m68k port.
+  <li> Joseph Myers for his work on the PDP-11 port.
   <li> Nathan Myers for his work on libstdc++-v3.
   <li> Pieter Nagel
   <li> Hans-Peter Nilsson for various documentation fixes and other
@@ -122,13 +136,18 @@ small fixes.
   <li> Sergey Okhapkin
   <li> Alexandre Oliva for various build infrastructure improvements, scripts
   and amazing testing work.
-  <li> Alexandre Petit-Bianco for infrastructure related to Java.
-  <li> Gerald Pfeifer for helping with the web pages and pointing out lots
+  <li> Ranier Orth for random MIPS work.
+  <li> Melissa O'Neill for various NeXT fixes.
+  <li> Alexandre Petit-Bianco for his Java work.
+  <li> Matthias Pfaller for major improvements to the NS32k port.
+  <li> Gerald Pfeifer for maintenance of the web pages and pointing out lots
   of problems we need to solve.
   <li> Ovidiu Predescu for his work on the ObjC front end.
   <li> Henning Ptersen
-  <li> Ken Raeburn for various improvements to checker and mips ports.
-  <li> Joern Rennecke for maintaining the sh port, regmove & reload hacking.
+  <li> Ken Raeburn for various improvements to checker, mips ports and various
+  cleanups in the compiler.
+  <li> Joern Rennecke for maintaining the sh port, loop, regmove & reload
+       hacking.
   <li> Gavin Romig-Koch for lots of behind the scenes MIPS work.
   <li> Ken Rose for fixes to our delay slot filling code.
   <li> Andreas Schawb for his work on the m68k port.
@@ -156,14 +175,15 @@ small fixes.
   <li> Gary Thomas for his ongoing work to make the PPC work for Linux.
   <li> Philipp Thomas
   <li> Teemu Torma for thread safe exception handling support.
-  <li> Tom Tromey for internationalization support (which egcs will import
-  from gcc2 shortly).
+  <li> Tom Tromey for internationalization support and his Java work.
   <li> Lassi Tuura for improvements to config.guess to determine HP processor
   types.
   <li> Todd Vierling for contributions for NetBSD ports.
   <li> Krister Walfridsson for random bugfixes.
-  <li> John Wehle for various improvements for the x86 code generator.
+  <li> John Wehle for various improvements for the x86 code generator and
+  related infrastructure improvements to help x86 code generation.
   <li> Stephen Williams
+  <li> Zack Weinberg for major work on cpplib.
   <li> Jim Wilson for tackling hard problems in various places that nobody else
   wanted to work on.
   <li> Carlo Wood for various fixes.
@@ -214,7 +234,7 @@ testing egcs:
 And finally we'd like to thank everyone who uses the compiler, submits bug
 reports and generally reminds us why we're doing this work in the first place.
 
-<p><i>Last modified:  September 1, 1998</i>
+<p><i>Last modified:  February 18, 1999</i>
 
 
 <hr>
