Add links to the "Bugs and Non-Bugs" section. By Nathan Sidwell <nathan@acm.org>.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -237,7 +237,7 @@ of the gcc maintainers.
 </pre>
 
 <hr>
-<h2> <a name="bugreport">How to report bugs</a></h2>
+<h2><a name="bugreport">How to report bugs</a></h2>
 <p>There are complete instructions in the egcs info manual, section Bugs.  The
 manual can be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if the GNU
 <tt>info</tt> program is installed on your system by
@@ -819,6 +819,11 @@ if it works for earlier versions of gcc or other compilers.  The
 following problems with some releases of widely used packages have
 been identified:
 
+<p>There is a separate <a href="c++bugs.html">list of well-known C++ bugs</a>
+describing known deficiencies in the <em>C++ compiler</em>. Naturally we'd
+like that list to be of zero length.
+
+<p>To report a bug, see <a href="bugreport">How to report bugs</a>.
 
 <hr>
 <h2><a name="fdzero">FD_ZERO macro</a></h2>
@@ -1107,7 +1112,7 @@ only be necessary if you are building anything obtained from CVS.
 
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  February 15, 1999</i>
+<p><i>Last modified:  February 18, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
