AIX 4.3 bootstrap problems

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -733,11 +733,12 @@ shipped with AIX 4.3.2.
 
 <hr>
 <h2><a name="aix43">Unable to bootstrap egcs-1.1 on AIX 4.3</a></h2>
-<p>The complete egcs-1.1 distribution will try to build 64-bit versions of
-all runtime libraries which will fail for libstdc++.  If only a C compiler is
-desired, configure and build egcs-core-1.1.  If other languages are needed,
-configure as if the system were rs6000-ibm-aix4.2, which will disable
-64-bit support.  This will be fixed in the egcs-1.1.1 release.
+<p>The AIX 4.3.2.1 linker (bos.rte.bind_cmds Level 4.3.2.1) will dump core
+with a segmentation fault when invoked by any version of GCC.  A fix for
+APAR IX87327 will be available from IBM Customer Support.
+<p>The C++ portion of the egcs-1.1.0 distribution could not build the
+64-bit version of the libstdc++ library.  This has been fixed in the
+egcs-1.1.1 release. 
 
 <hr>
 <h2><a name="aixas">Assembler error on AIX 4.3.0</a></h2>
