Remove bootstrap failure for egcs-1.1.0 on AIX 4.3. Convert bootstrap error to AIX 4.3.2 linker error.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -64,7 +64,7 @@ comp.std.c++ FAQ</a>.
     <li><a href="#sig11">Signal 11 on Linux</a>
     <li><a href="#bigtoc">Link failures using -bbigtoc on AIX 4.1</a>
     <li><a href="#aixcoff">AIX 4.3 archive libraries ("not a COFF file")</a>
-    <li><a href="#aix43">Unable to bootstrap egcs-1.1 on AIX 4.3</a>
+    <li><a href="#aixld">Linker error on AIX 4.3.2</a>
     <li><a href="#aixas">Assembler error on AIX 4.3.0</a>
     <li><a href="#o32abi">Does EGCS support the O32 ABI on IRIX 6?</a>
     <li><a href="#irix6n32bugs">Bugs in N32 and N64 ABI implementation on IRIX 6</a>
@@ -732,13 +732,10 @@ using the original "small format".  A correct version of the routines is
 shipped with AIX 4.3.2.
 
 <hr>
-<h2><a name="aix43">Unable to bootstrap egcs-1.1 on AIX 4.3</a></h2>
+<h2><a name="aixld">Linker error on AIX 4.3.2</a></h2>
 <p>The AIX 4.3.2.1 linker (bos.rte.bind_cmds Level 4.3.2.1) will dump core
 with a segmentation fault when invoked by any version of GCC.  A fix for
 APAR IX87327 will be available from IBM Customer Support.
-<p>The C++ portion of the egcs-1.1.0 distribution could not build the
-64-bit version of the libstdc++ library.  This has been fixed in the
-egcs-1.1.1 release. 
 
 <hr>
 <h2><a name="aixas">Assembler error on AIX 4.3.0</a></h2>
