Fix link. Hans-Peter Nilsson <hp@bitrange.com>.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -821,7 +821,7 @@ been identified:
 describing known deficiencies in the <em>C++ compiler</em>. Naturally we'd
 like that list to be of zero length.
 
-<p>To report a bug, see <a href="bugreport">How to report bugs</a>.
+<p>To report a bug, see <a href="#bugreport">How to report bugs</a>.
 
 <hr>
 <h2><a name="fdzero">FD_ZERO macro</a></h2>
