fix doc attributions, etc.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -90,7 +90,7 @@
 
   <li><a href="http://www.validgh.com/goldberg/addendum.html">
   Differences Among IEEE 754 Implementations</a>
-  by David Goldberg
+  by Doug Priest (included in the PostScript-format document above)
 
   <li><a href="ftp://cs.rice.edu/public/preston/optimizer">Massively
   Scalar Compiler Project</a>
