--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -62,6 +62,9 @@ serious problems in egcs-1.1.1.
 
     <li> Tighten security for temporary files.
 
+    <li> Improve compile time for codes which make heavy use of overloaded
+	 functions.
+
   </ul>
   <li> Platform specific improvements and fixes
   <ul>
