note another fix.

--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -65,6 +65,8 @@ serious problems in egcs-1.1.1.
     <li> Improve compile time for codes which make heavy use of overloaded
 	 functions.
 
+    <li> Fix multiply defined constructor/destructor symbol problems.
+
   </ul>
   <li> Platform specific improvements and fixes
   <ul>
